--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="/favicon.svg" rel="icon" type="image/svg+xml" />
+    <meta content="dark" name="color-scheme">
     <title>Status Check</title>
   </head>
   <body>
